Link fixed for eltour de tucson - Animation restricted on mobile

--- a/chamber/styles/directory-large.css
+++ b/chamber/styles/directory-large.css
@@ -3,6 +3,7 @@
     #header-left {
         min-width: 700px;
     }
+
 }
 
 /* For the hero images */
@@ -67,6 +68,14 @@
 
     .discover-section-wrapper {
         grid-template-columns: 1fr 2fr;
+    }
+
+    .discover-cards h3:hover {
+        transform: scale(1.2) rotate(-5deg);
+    }
+
+    .discover-cards a:hover {
+        transform: scale(1.1) rotate(15deg);
     }
 }
 
